[gd_scene load_steps=9 format=3 uid="uid://jpxlj2s2hu4e"]

[ext_resource type="Script" uid="uid://djwptt0q8vaxp" path="res://Player/Attack/corpse_rain.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dwreeasepmiip" path="res://Textures/Items/Weapons/head.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cevm6pn0evxmw" path="res://Textures/Items/Weapons/arm.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cav37e0g32nqf" path="res://Textures/Items/Weapons/foot.png" id="4"]
[ext_resource type="Texture2D" uid="uid://db332dp6h3021" path="res://Textures/Items/Weapons/torso.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dtt4o3o62nbln" path="res://Textures/Items/Weapons/hand.png" id="6"]
[ext_resource type="AudioStream" uid="uid://3do1evt17wlm" path="res://Audio/SoundEffect/hit-flesh-02-266309.mp3" id="7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_Corpse"]
radius = 10.0


[node name="CorpseRain" type="Area2D" groups=["attack"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1")


[node name="HeadSprite" type="Sprite2D" parent="."]
texture = ExtResource("2")


[node name="ArmSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3")


[node name="FootSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4")


[node name="TorsoSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5")


[node name="HandSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6")


[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_Corpse")


[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
volume_db = 2.476
autoplay = true


[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
